# social-network

./: Cargo.toml  build.rs
api-gateway/: Cargo.toml
api-gateway/src/: main.rs
auth-service/: Cargo.toml  build.rs
auth-service/src/: main.rs  service.rs
auth-service/src/domain/: password.rs  token.rs
microservices/api-gateway/: Cargo.toml
microservices/api-gateway/src/: config.rs  main.rs  state.rs
microservices/api-gateway/src/dto/: auth_dto.rs
microservices/api-gateway/src/routes/: auth.rs  health.rs
microservices/auth-service/src/: error.rs  main.rs  service.rs
microservices/posts-service/: Cargo.toml  build.rs
microservices/posts-service/src/: config.rs  error.rs  main.rs  model.rs  proto.rs  repository.rs  service.rs
microservices/posts-service/src/domain/: time.rs
migrations/: 20251122081052_init_users.down.sql  20251122081052_init_users.up.sql  20251206194137_init_posts.up.sql
proto/: auth.proto  posts.proto  users.proto
src/: api-gateway.rs  auth-service.rs  users-service.rs
users-service/: Cargo.toml  build.rs
users-service/src/: main.rs  repository.rs  service.rs  structs.rs
