[package]
name = "social-network"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api-gateway"
path = "src/api-gateway.rs"

[[bin]]
name = "auth-service"
path = "src/auth-service.rs"

[[bin]]
name = "users-service"
path = "src/users-service.rs"

[dependencies]
tonic = { version = "0.14.2", features = [ "transport" ] }
tokio = { version = "1.48.0", features = [ "full" ] }
prost = "0.14.1"
tonic-prost = "0.14.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
actix-web = "4.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
