[package]
name = "posts-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.14.2", features = [ "transport" ] }
tokio = { version = "1.48.0", features = [ "full" ] }
prost = "0.14.1"
tonic-prost = "0.14.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15.7"
serde = {version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["serde"] }
prost-types = "0.14"


[build-dependencies]
tonic-prost-build = "0.14.2"
